--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,6 +27,7 @@ jobs:
         with:
           node-version: 20
           cache: "npm"
+      - run: docker exec iris iris session iris -U%SYS '##class(Security.Users).UnExpireUserPasswords("*")'
       - run: npm ci
       - run: npm run build
       - run: npm run test
