--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,8 +9,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        node-version:
+          - 20
+          - 22
+          - 24
         image:
-          - 2024.3
           - latest-em
           - latest-preview
     services:
@@ -25,7 +28,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: ${{ matrix.node-version }}
           cache: "npm"
       - run: docker exec iris iris session iris -U%SYS '##class(Security.Users).UnExpireUserPasswords("*")'
       - run: npm ci
